@@ -27,7 +27,7 @@
 		</div>
 	</fieldset>
 	<div class="clr"> </div>
-	<table class="adminlist" cellspacing="1">
+	<table class="adminlist">
 	<thead>
 	<tr>
 		<th width="20">
