@@ -35,7 +35,7 @@ $user = & JFactory::getUser();
 	</fieldset>
 	<div class="clr"> </div>
 
-	<table class="adminlist">
+	<table class="adminlist" id="template-mgr">
 		<thead>
 			<tr>
 				<th class="col1template">
@@ -68,10 +68,10 @@ $user = & JFactory::getUser();
 		<tbody>
 		<?php foreach ($this->items as $i => $item) : ?>
 			<tr class="row<?php echo $i % 2; ?>">
-				<td>
+				<td class="center">
 					<?php echo JHtml::_('templates.thumb', $item->element, $item->client_id); ?>
 				</td>
-				<td>
+				<td class="template-name">
 					<a href="<?php echo JRoute::_('index.php?option=com_templates&view=template&id='.(int) $item->extension_id); ?>">
 						<?php echo $item->name;?></a>
 				</td>
@@ -86,17 +86,16 @@ $user = & JFactory::getUser();
 				</td>
 				<td>
 					<?php if ($author = $item->xmldata->get('author')) : ?>
-						<?php echo $this->escape($author); ?>
+						<p><?php echo $this->escape($author); ?></p>
 					<?php else : ?>
-						-
+						&mdash;
 					<?php endif; ?>
 					<?php if ($email = $item->xmldata->get('authorEmail')) : ?>
-						<br /><?php echo $this->escape($email); ?>
+						<p><?php echo $this->escape($email); ?></p>
 					<?php endif; ?>
 					<?php if ($url = $item->xmldata->get('authorUrl')) : ?>
-						<br />
-						<a href="<?php echo $this->escape($url); ?>">
-							<?php echo $this->escape($url); ?></a>
+						<p><a href="<?php echo $this->escape($url); ?>">
+							<?php echo $this->escape($url); ?></a></p>
 					<?php endif; ?>
 				</td>
 			</tr>
