@@ -1,0 +1,52 @@
+<?php
+/**
+ * @version		$Id: error.php 11953 2009-06-01 03:36:36Z robs $
+ * @package		Joomla.Site
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+defined('_JEXEC') or die;
+?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->language; ?>" lang="<?php echo $this->language; ?>" dir="<?php echo $this->direction; ?>">
+<head>
+	<title><?php echo $this->error->getCode(); ?> - <?php echo $this->title; ?></title>
+	<link rel="stylesheet" href="<?php echo $this->baseurl; ?>/templates/system/css/error.css" type="text/css" />
+</head>
+<body>
+	<div align="center">
+		<div id="outline">
+		<div id="errorboxoutline">
+			<div id="errorboxheader"><?php echo $this->error->getCode(); ?> - <?php echo $this->error->getMessage(); ?></div>
+			<div id="errorboxbody">
+			<p><strong><?php echo JText::_('You may not be able to visit this page because of:'); ?></strong></p>
+				<ol>
+					<li><?php echo JText::_('An out-of-date bookmark/favourite'); ?></li>
+					<li><?php echo JText::_('A search engine that has an out-of-date listing for this site'); ?></li>
+					<li><?php echo JText::_('A mis-typed address'); ?></li>
+					<li><?php echo JText::_('You have no access to this page'); ?></li>
+					<li><?php echo JText::_('The requested resource was not found'); ?></li>
+					<li><?php echo JText::_('An error has occurred while processing your request.'); ?></li>
+				</ol>
+			<p><strong><?php echo JText::_('Please try one of the following pages:'); ?></strong></p>
+			<p>
+				<ul>
+					<li><a href="<?php echo $this->baseurl; ?>/index.php" title="<?php echo JText::_('Go to the home page'); ?>"><?php echo JText::_('Home Page'); ?></a></li>
+				</ul>
+			</p>
+			<p><?php echo JText::_('If difficulties persist, please contact the system administrator of this site.'); ?></p>
+			<div id="techinfo">
+			<p><?php echo $this->error->getMessage(); ?></p>
+			<p>
+				<?php if ($this->debug) :
+					echo $this->renderBacktrace();
+				endif; ?>
+			</p>
+			</div>
+			</div>
+		</div>
+		</div>
+	</div>
+</body>
+</html>
